kubernetes/ingress-cert.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-php
  annotations:
    spec.ingressClassName: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - m3l4.com
    secretName: tls-secret
  rules:
  - host: m3l4.com
    http:
      paths:
      - path: /php-app(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: php-svc
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: php-svc
            port:
              number: 80
