kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: m3l4.com
  -  http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: php-svc
            port:
              number: 80
